--- a/Project/index.html
+++ b/Project/index.html
@@ -9,10 +9,34 @@
     <link rel="stylesheet" href="CSS1.css">
 </head>
 <body>
+    <!-- <header>開頭  <footer> -->
     <h1 name="旅遊">旅遊管理</h1>
+    <header>
+        <img style="width:180px; height:180px" src="img/logo3.jpg" alt="長方形logo">
+
+
+    </header>
+    <nav>
+        <a href="index3.html">第三項 </a> |
+        <a href="index2.html">第二項 </a> |
+    </nav>
+    <h1>div</h1>
+    <div style="width:300px; height:500px; background-color: rgb(1, 8, 5);">
+        <p>這是區域</p>
+
+    </div>
+    <h1>水平線標籤</h1>
+    <hr>
+    <hr>
+    <h1>span標籤</h1>
+    <p>這是<span style="color: blueviolet;">段</span>段落</p>
+    <br>
+    <br>
     <p style="color:black; font-size:50px; font-weight: bolder;"><a href="index2.html">超連結第二頁</a></p>
     <p style="color:black; font-size:50px; font-weight: bolder;"><a href="index3.html">超連結第三頁</a></p>
     <img style="width:180px; height:180px" src="img/logo3.jpg" alt="長方形logo">
+    <img style="width:180px; height:180px" src="img/logo2.jpg" alt="長方形logo">
+    <a href="index3.html"><img style="width:180px; height:180px" src="img/logo2.jpg" alt="長方形logo"></a>
     <h3>成員</h3>
     <ol type="I">
         <li>蔡博安</li>
@@ -29,9 +53,11 @@
     <a target="_blank" title="斗羅" href="https://www.youtube.com/watch?v=w-jwSu7uE2A&ab_channel=%E6%BC%AB%E6%8E%A8%E7%94%B7%E5%AD%A9">連到</a>
     <p>🌱昊天宗五大长老成唐三陪练！<a href="https://www.youtube.com/watch?v=w-jwSu7uE2A&ab_channel=%E6%BC%AB%E6%8E%A8%E7%94%B7%E5%AD%A9">唐三</a>首次使用三叉戟神技和天青牛蟒魂骨！一套Combo带走五名封号斗罗！【斗罗大陆 Soul Land】</p>
     <img src="img/logo4.jpg" alt="長方形logo">
-    <p></p>
-    <p></p>
-    <p></p>
+    <br><br><br><br><br>
+    <footer>
+        <img style="width:180px; height:180px" src="img/logo3.jpg" alt="長方形logo">
+
+    </footer>
     
 </body>
 </html>
